Bug 140917 - skia/salbmp.cxx assertion on Windows with 150% text size
Summary: skia/salbmp.cxx assertion on Windows with 150% text size
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.2
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2021-03-09 14:50 UTC by Mark Hung
Modified: 2021-03-25 12:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Callstack (14.54 KB, text/plain)
2021-03-09 15:02 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2021-03-09 14:50:12 UTC
Description:
Reproducible with current master and enable debugging.

skia/salbmp.cxx assert on Windows with 150% text size in 
Display settings / Scale and layout / Change the size of text, apps, and other items. If I set text size to 100%, everything is fine.

Steps to Reproduce:
1. In Display settings / Scale and layout / Change the size of text, apps, and other items: set to 150%
2. Start LibreOffice.


Actual Results:
Assert immediately.

Assertion failed: mScanlineSize == int(AlignedWidth4Bytes(mPixelsSize.Width
() * mBitCount)), file C:/cygwin/home/hungl/lode/dev/core/vcl/skia/salbmp.c
xx, line 117


Expected Results:
Everything should be fine.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cf88e15abf8cc0c7ca7c9edb221c878f8d6b4726
CPU threads: 16; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: zh-TW (zh_TW); UI: en-US
Calc: CL
Comment 1 Mark Hung 2021-03-09 15:02:32 UTC
Created attachment 170374 [details]
Callstack
Comment 2 Mark Hung 2021-03-09 15:10:03 UTC

ImplImageTree::loadImage() is called with 
rName = "vcl/res/check2.png"
rStyle = "colibre" 
localized = true
ImageLoadFlags = NONE
nScalePercentage = -1
Comment 3 Luboš Luňák 2021-03-10 11:58:12 UTC
*** Bug 140930 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2021-03-10 14:33:14 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7ba7a1170a46ad340d06822a03f7196ccef29d84

forgotten ComputeScanlineSize() (tdf#140917)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Regina Henschel 2021-03-10 18:58:33 UTC
My build still crashes. But my build is not a clean build. So I'll wait until there is a Win64 daily build with your fix and test again.
Comment 6 Commit Notification 2021-03-11 10:45:25 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/7d4644f0631d7b88514d9a92def06a463021f283

forgotten ComputeScanlineSize() (tdf#140917)

It will be available in 7.1.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2021-03-24 13:30:25 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-1-2":

https://git.libreoffice.org/core/commit/febc5c7e7b15e84019e308d695372472a9baedf5

forgotten ComputeScanlineSize() (tdf#140917)

It will be available in 7.1.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.