forgotten ComputeScanlineSize() (tdf#140917)

Change-Id: Id139cea52832b7973dfac47d309d5bba8299b4e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112263
Reviewed-by: Mark Hung <marklh9@gmail.com>
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
Tested-by: Jenkins